first 2 items completed

--- a/ReadLater5/ReadLater5/appsettings.json
+++ b/ReadLater5/ReadLater5/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\;Initial Catalog=ReadLater;Integrated Security=True;"
+    "xDefaultConnection": "Data Source=.\\;Initial Catalog=ReadLater;Integrated Security=True;",
+    "DefaultConnection": "Server=tcp:ptmsqldatauk.database.windows.net,1433;Database=AHDev;User ID=Demo;Password=ReadLater5;Trusted_Connection=False;Encrypt=True;"
   },
   "Logging": {
     "LogLevel": {
